--- a/portfolio/pom.xml
+++ b/portfolio/pom.xml
@@ -37,6 +37,7 @@
           <!-- TODO: set project ID. -->
           <deploy.projectId>YOUR_PROJECT_ID_HERE</deploy.projectId>
           <deploy.version>1</deploy.version>
+          <port>8081</port>
         </configuration>
       </plugin>
     </plugins>
